--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
+<!DOCTYPE html>
+<html lang="sp">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1 style="color:rgb(0, 255, 60); font-size:24px;">Pagina Principal Laboratorio 8</h1>
+    <h2 style="color:red; font-size:16px;">Introducción</h2>
+    <p style="color:blue; font-size:12px;font-family:Georgia, 'Times New Roman', Times, serif;">Introducción</p>
 
+</body>
+</html>
