--- a/index.html
+++ b/index.html
@@ -4,17 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        h1 {
-            color:green; font-size:24px;
-        }
-       h2{
-        color:red; font-size:16px;
-       } 
-       p{ 
-        color:blue; font-size:12px;font-family:Georgia, 'Times New Roman', Times, serif;
-       }
-    </style>
+<link rel="stylesheet" href="">
     <title>Document</title>
 </head>
 <body>
