--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Pagina Principal Laboratorio 8</h1>
     <h2>Introducción</h2>
-    <p>Introducción</p>
+    <p>Objetivos</p>
 </body>
 </html>
